<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/nestedContract"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rootContacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/toolbar"
            layout="@layout/include_toolbar_main"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintBottom_toTopOf="@id/view"
            app:layout_constraintStart_toStartOf="@id/txt1Contacts"
            app:layout_constraintEnd_toEndOf="@id/txt1Contacts"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"
            android:text="@string/contacts_work_time"
            android:translationZ="10dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/img_1"
            android:scaleType="centerCrop"/>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="180dp"
            android:background="@drawable/skin_white_corner_top"/>

        <TextView
            android:id="@+id/txt1Contacts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="45dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:drawableStart="@drawable/ic_50"
            android:text="@string/contacts_1"
            android:textStyle="bold"
            android:drawablePadding="30dp"/>

        <View
            android:id="@+id/divider1"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            app:layout_constraintTop_toBottomOf="@id/txt1Contacts"
            app:layout_constraintStart_toStartOf="@id/txt1Contacts"
            app:layout_constraintEnd_toEndOf="@id/txt1Contacts"
            android:background="@color/colorGrey"
            android:layout_marginTop="20dp"
            android:layout_marginStart="50dp"/>

        <TextView
            android:id="@+id/txt2Contacts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/divider1"
            app:layout_constraintStart_toStartOf="@id/txt1Contacts"
            app:layout_constraintEnd_toEndOf="@id/txt1Contacts"
            android:layout_marginTop="30dp"
            android:drawableStart="@drawable/ic_51"
            android:text="@string/contacts_2"
            android:textStyle="bold"
            android:drawablePadding="30dp"/>

        <View
            android:id="@+id/divider2"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            app:layout_constraintTop_toBottomOf="@id/txt2Contacts"
            app:layout_constraintStart_toStartOf="@id/divider1"
            app:layout_constraintEnd_toEndOf="@id/divider1"
            android:background="@color/colorGrey"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/txt3Contacts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/divider2"
            app:layout_constraintStart_toStartOf="@id/txt1Contacts"
            app:layout_constraintEnd_toEndOf="@id/txt1Contacts"
            android:layout_marginTop="30dp"
            android:drawableStart="@drawable/ic_52"
            android:text="@string/contacts_3"
            android:textStyle="bold"
            android:drawablePadding="30dp"/>

        <View
            android:id="@+id/divider3"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            app:layout_constraintTop_toBottomOf="@id/txt3Contacts"
            app:layout_constraintStart_toStartOf="@id/divider1"
            app:layout_constraintEnd_toEndOf="@id/divider1"
            android:background="@color/colorGrey"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/txt4Contacts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/divider3"
            app:layout_constraintStart_toStartOf="@id/txt1Contacts"
            app:layout_constraintEnd_toEndOf="@id/txt1Contacts"
            android:layout_marginTop="30dp"
            android:drawableStart="@drawable/ic_53"
            android:text="@string/contacts_4"
            android:textStyle="bold"
            android:drawablePadding="30dp"/>

        <View
            android:id="@+id/divider4"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            app:layout_constraintTop_toBottomOf="@id/txt4Contacts"
            app:layout_constraintStart_toStartOf="@id/divider1"
            app:layout_constraintEnd_toEndOf="@id/divider1"
            android:background="@color/colorGrey"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/text1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/divider4"
            app:layout_constraintStart_toStartOf="@id/txt1Contacts"
            app:layout_constraintEnd_toEndOf="@id/txt1Contacts"
            android:layout_marginTop="30dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:text="@string/contacts_write_us"/>

        <com.zed.kz.doskaz.global.views.ObjectEditTextView
            android:id="@+id/edtNameContacts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text1"
            app:layout_constraintStart_toStartOf="@id/txt1Contacts"
            app:layout_constraintEnd_toEndOf="@id/txt1Contacts"
            app:title="@string/contacts_your_name"/>

        <com.zed.kz.doskaz.global.views.ObjectEditTextView
            android:id="@+id/edtEmailContacts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/edtNameContacts"
            app:layout_constraintStart_toStartOf="@id/txt1Contacts"
            app:layout_constraintEnd_toEndOf="@id/txt1Contacts"
            app:title="@string/contacts_your_email"/>

        <com.zed.kz.doskaz.global.views.ObjectBigEditTextView
            android:id="@+id/edtTextContacts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/edtEmailContacts"
            app:layout_constraintStart_toStartOf="@id/txt1Contacts"
            app:layout_constraintEnd_toEndOf="@id/txt1Contacts"
            app:title="@string/contacts_your_text"/>

        <Button
            android:id="@+id/btnSendContacts"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            app:layout_constraintTop_toBottomOf="@id/edtTextContacts"
            app:layout_constraintStart_toStartOf="@id/txt1Contacts"
            app:layout_constraintEnd_toEndOf="@id/txt1Contacts"
            android:layout_marginTop="20dp"
            android:text="@string/send"/>

        <TextView
            android:id="@+id/text5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/btnSendContacts"
            app:layout_constraintStart_toStartOf="@id/txt1Contacts"
            app:layout_constraintEnd_toEndOf="@id/txt1Contacts"
            android:layout_marginTop="30dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/contacts_regional"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerRegionalContacts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/txt1Contacts"
            app:layout_constraintEnd_toEndOf="@id/txt1Contacts"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:nestedScrollingEnabled="true"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>